--- a/portfolio/assets/css/main.css
+++ b/portfolio/assets/css/main.css
@@ -191,6 +191,10 @@ body {
   background: #ffffff;
 }
 
+#cap-button {
+  margin-top: 20px;
+}
+
 body.is-preload *,
 body.is-preload *:before,
 body.is-preload *:after {
@@ -233,6 +237,23 @@ html {
     font-size: 10pt;
   }
 }
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px; height: 0; overflow: hidden;
+  }
+  
+  .video-container iframe,
+  .video-container object,
+  .video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  }
+  
 
 body {
   background-color: #ffffff;
@@ -8587,3 +8608,5 @@ h3 {
   font-size: 1.5rem;
   color: #90707e;
 }
+
+
